# x3py

./: CMakeLists.txt
example/: CMakeLists.txt
example/consoledemo/: CMakeLists.txt  main.cpp
example/plugins/: CMakeLists.txt
example/plugins/libpln1/: CMakeLists.txt
example/plugins/libpln2/: CMakeLists.txt
example/plugins/libspln/: CMakeLists.txt
example/plugins/observerex/: CMakeLists.txt
example/plugins/plsimple/: CMakeLists.txt
example/plugins/plsimple2/: CMakeLists.txt  module.cpp  plsimple.cpp  plsimple.h
example/plugins/pltempl/: CMakeLists.txt
include/: objptr.h
interface/core/: objptr.h
interface/core/module/: pluginimpl.h
interface/core/nonplugin/: scanplugins.h  useplugins.h
source/: CMakeLists.txt
source/core/: CMakeLists.txt
source/core/x3manager/: CMakeLists.txt  module.cpp  plugins.cpp
source/example/: CMakeLists.txt
source/example/consoledemo/: CMakeLists.txt  main.cpp
source/example/libpln1/: CMakeLists.txt
source/example/libpln2/: CMakeLists.txt
source/example/libspln/: CMakeLists.txt  module.cpp
source/example/plsimple/: CMakeLists.txt
source/example/plsimple2/: CMakeLists.txt
x3manager/: CMakeLists.txt  plugins.cpp  plugins.h
